[project]
name = "cuttleagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "typer>=0.24.1",
]
